# hackathon

./: .env  README.md  main.py  my_secrets.py  pyproject.toml
src/hackathon/: __init__.py
