[project]
name = "hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Umair Daud", email = "umairdaud01@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "asyncio>=3.4.3",
    "chainlit>=2.5.5",
    "dotenv>=0.9.9",
    "openai-agents>=0.1.0",
    "requests>=2.32.4",
    "rich>=14.0.0",
]

[project.scripts]
hackathon = "hackathon:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
